# GSTrading

./: .gitignore  Dockerfile  README.md  Stratergy.py  main.py  pyproject.toml  requirements.txt  trading_rules.docx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml
docs/: bug_tracker.md  context.md  design.md  issue_tracker.md  project_tracker.md  session_memory.md  trading_rules.md
src/codextrading/: __init__.py  cli.py  config.py  ib_client.py  memory.py  memory_cli.py  service.py
tests/: test_cli.py  test_ib_client.py  test_memory.py
