[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codextrading"
version = "0.1.0"
description = "Production-oriented Interactive Brokers market data scaffold."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Girish" }
]
dependencies = [
  "ibapi==9.81.1.post1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"Stratergy.py" = ["ALL"]
